# Onegin_poem

./: .gitignore  CMakeLists.txt  Onegin_functions.cpp  Onegin_main.cpp  text_out.txt
MyOnegin/: Makefile  Onegin.h  Onegin_functions.cpp  Onegin_main.cpp  text_in.txt  text_out.txt
firewall/: CMakeLists.txt  Makefile  Onegin.h  Onegin_functions.cpp
